# quant-stock-fetcher

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: fetch_cli.py  fetcher.py  visualizer.py
tests/: test_fetcher.py
